--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
 body{
     display: flex;
     flex-direction: column;
+    flex: 1 1 auto;
+
     margin: auto;
+    font-family: sans-serif
 }
 img{
     height: 250px;
@@ -69,4 +72,105 @@ button{
 }
 .area1{
     background-color: #eaeaf1;
+}
+
+.box{
+    height: 250px;
+    width: 250px;
+    
+    border: 4px solid #608dcc;
+    border-radius: 12px;
+    
+    
+}
+.area1{
+    display: flex;
+    flex-direction: column;
+    flex: 1 2 auto;
+}
+.inf1{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 24px;
+    padding: 28px;
+    font-size: 46px;
+    font-weight: 700;
+}
+h5{
+    width: 260px;
+    font-size: 18px;
+    color: #222222;
+    
+}
+.boxes{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 83px;
+    flex: 1 2 auto;
+    
+}
+.rant{
+    width: 60%;
+    height: auto;
+    margin-top: 126px;
+    margin-bottom: 2px;
+    font-style: italic;
+    font-size: 36px;
+    color: #4a5058;
+}
+.area2{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #e5e7eb;
+    flex: 1;
+
+}
+#aftor{
+    display: flex;
+    justify-content: flex-end;
+    align-self: flex-end;
+    margin-right: 23%;
+    font-size: 26px;
+    font-weight: 700;
+    color: #222222;
+}
+.area3{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 300px;
+}
+.bluebox{
+    background-color: #2d7be7;
+    width: 60%;
+    height: 140px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    border-radius: 9px;
+    color: #e5e7eb;
+    gap: 64px;
+}
+.belo{
+    color: white;
+    border: #f5f5f7;
+    font-size: larger;
+    border: 2px solid;
+}
+.footer{
+    color: whitesmoke;
+    background-color: #1f2937;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100px;
+}
+h3{
+    margin-bottom: 0px;
 }
